refactor(manager-dashboard): return typed Row DTOs from mappers
Replace Map<String, Object> returns in DashboardMapper with Row DTOs
under entity/bo/dashboard/ so topology stitching and daily-growth /
device-bucket aggregation run on typed getters. Add the shared
UNKNOWN_BUCKET constant to TopologyLimits for enum-lookup fallbacks.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>