@@ -19,9 +19,11 @@ package io.github.pnoker.common.manager.service.impl;
 
 import com.github.benmanes.caffeine.cache.Cache;
 import com.github.benmanes.caffeine.cache.Caffeine;
+import io.github.pnoker.common.constant.common.SymbolConstant;
 import io.github.pnoker.common.enums.DriverTypeFlagEnum;
 import io.github.pnoker.common.enums.EnableFlagEnum;
 import io.github.pnoker.common.manager.constant.TopologyLimits;
+import io.github.pnoker.common.manager.entity.bo.dashboard.*;
 import io.github.pnoker.common.manager.entity.vo.dashboard.*;
 import io.github.pnoker.common.manager.mapper.DashboardMapper;
 import io.github.pnoker.common.manager.service.DashboardService;
@@ -52,28 +54,22 @@ public class DashboardServiceImpl implements DashboardService {
     @Resource
     private DashboardMapper dashboardMapper;
 
-    private static List<BucketVO> buckets(List<Map<String, Object>> rows, String keyCol, KeyFormatter fmt) {
+    private static List<BucketVO> buckets(List<BucketRow> rows, KeyFormatter fmt) {
         List<BucketVO> out = new ArrayList<>(rows.size());
-        for (Map<String, Object> row : rows) {
+        for (BucketRow row : rows) {
             BucketVO vo = new BucketVO();
-            vo.setKey(fmt.format(row.get(keyCol)));
-            vo.setCount(toLong(row.get("count")));
+            vo.setKey(fmt.format(row.getKey()));
+            vo.setCount(row.getCount());
             out.add(vo);
         }
         return out;
     }
 
-    private static long toLong(Object v) {
-        if (v == null) return 0L;
-        if (v instanceof Number n) return n.longValue();
-        return Long.parseLong(v.toString());
-    }
-
     private static String enableKey(Object raw) {
-        if (raw == null) return "UNKNOWN";
+        if (raw == null) return TopologyLimits.UNKNOWN_BUCKET;
         Byte b = raw instanceof Number n ? n.byteValue() : Byte.parseByte(raw.toString());
         EnableFlagEnum e = EnableFlagEnum.ofIndex(b);
-        return e == null ? "UNKNOWN" : e.name();
+        return e == null ? TopologyLimits.UNKNOWN_BUCKET : e.name();
     }
 
     // ================================================================
@@ -81,38 +77,30 @@ public class DashboardServiceImpl implements DashboardService {
     // ================================================================
 
     private static String driverTypeKey(Object raw) {
-        if (raw == null) return "UNKNOWN";
+        if (raw == null) return TopologyLimits.UNKNOWN_BUCKET;
         Byte b = raw instanceof Number n ? n.byteValue() : Byte.parseByte(raw.toString());
         DriverTypeFlagEnum e = DriverTypeFlagEnum.ofIndex(b);
-        return e == null ? "UNKNOWN" : e.name();
+        return e == null ? TopologyLimits.UNKNOWN_BUCKET : e.name();
     }
 
     /**
-     * Pads a sparse (day, count) row set into a fixed-length series ending on
-     * {@code today}. JDBC returns DATE as java.sql.Date or LocalDate depending
-     * on the driver, so handle both.
+     * Pads a sparse (day, count) row set into a fixed-length series ending
+     * on {@code today}.
      */
-    private static List<Long> fillSeries(List<Map<String, Object>> rows, LocalDate today, int length) {
+    private static List<Long> fillSeries(List<DailyGrowthRow> rows, LocalDate today, int length) {
         long[] series = new long[length];
         LocalDate anchor = today.minusDays(length - 1L);
-        for (Map<String, Object> row : rows) {
-            LocalDate day = toLocalDate(row.get("day"));
+        for (DailyGrowthRow row : rows) {
+            LocalDate day = row.getDay();
             if (day == null) continue;
             int idx = (int) (day.toEpochDay() - anchor.toEpochDay());
             if (idx >= 0 && idx < length) {
-                series[idx] = toLong(row.get("count"));
+                series[idx] = row.getCount();
             }
         }
         List<Long> out = new ArrayList<>(length);
         for (long v : series) out.add(v);
         return out;
-    }
-
-    private static LocalDate toLocalDate(Object v) {
-        if (v == null) return null;
-        if (v instanceof LocalDate ld) return ld;
-        if (v instanceof Date d) return d.toLocalDate();
-        return LocalDate.parse(v.toString());
     }
 
     private static TopologyStatsVO emptyStats(String rangeKey, boolean volumeMode) {
@@ -185,26 +173,14 @@ public class DashboardServiceImpl implements DashboardService {
         return l;
     }
 
-    private static String asString(Object v) {
-        return v == null ? "-" : v.toString();
-    }
-
     @Override
     public DriverStatsVO driverStats(Long tenantId) {
         DriverStatsVO out = new DriverStatsVO();
 
-        List<BucketVO> byEnable = buckets(
-                dashboardMapper.countDriverByEnable(tenantId),
-                "enable_flag",
-                DashboardServiceImpl::enableKey);
-        List<BucketVO> byType = buckets(
-                dashboardMapper.countDriverByType(tenantId),
-                "driver_type_flag",
-                DashboardServiceImpl::driverTypeKey);
-        List<BucketVO> byService = buckets(
-                dashboardMapper.countDriverByService(tenantId),
-                "service_name",
-                v -> v == null ? "-" : v.toString());
+        List<BucketVO> byEnable = buckets(dashboardMapper.countDriverByEnable(tenantId), DashboardServiceImpl::enableKey);
+        List<BucketVO> byType = buckets(dashboardMapper.countDriverByType(tenantId), DashboardServiceImpl::driverTypeKey);
+        List<BucketVO> byService = buckets(dashboardMapper.countDriverByService(tenantId),
+                v -> v == null ? SymbolConstant.HYPHEN : v.toString());
 
         out.setByEnable(byEnable);
         out.setByType(byType);
@@ -215,21 +191,14 @@ public class DashboardServiceImpl implements DashboardService {
 
     @Override
     public DeviceStatsVO deviceStats(Long tenantId, int topN) {
-        int clampedTopN = Math.max(1, Math.min(topN, 50));
+        int clampedTopN = Math.clamp(topN, 1, 50);
         DeviceStatsVO out = new DeviceStatsVO();
 
-        List<BucketVO> byEnable = buckets(
-                dashboardMapper.countDeviceByEnable(tenantId),
-                "enable_flag",
-                DashboardServiceImpl::enableKey);
-        List<BucketVO> byDriver = buckets(
-                dashboardMapper.countDeviceByDriver(tenantId, clampedTopN),
-                "driver_id",
-                v -> v == null ? "-" : v.toString());
-        List<BucketVO> byProfile = buckets(
-                dashboardMapper.countDeviceByProfile(tenantId, clampedTopN),
-                "profile_id",
-                v -> v == null ? "-" : v.toString());
+        List<BucketVO> byEnable = buckets(dashboardMapper.countDeviceByEnable(tenantId), DashboardServiceImpl::enableKey);
+        List<BucketVO> byDriver = buckets(dashboardMapper.countDeviceByDriver(tenantId, clampedTopN),
+                v -> v == null ? SymbolConstant.HYPHEN : v.toString());
+        List<BucketVO> byProfile = buckets(dashboardMapper.countDeviceByProfile(tenantId, clampedTopN),
+                v -> v == null ? SymbolConstant.HYPHEN : v.toString());
 
         out.setByEnable(byEnable);
         out.setByDriver(byDriver);
@@ -240,7 +209,7 @@ public class DashboardServiceImpl implements DashboardService {
 
     @Override
     public GrowthVO dailyGrowth(Long tenantId, int days) {
-        int clamped = Math.max(1, Math.min(days, 90));
+        int clamped = Math.clamp(days, 1, 90);
         LocalDate today = LocalDate.now();
         LocalDateTime from = today.minusDays(clamped - 1L).atStartOfDay();
         LocalDateTime to = today.plusDays(1).atStartOfDay();
@@ -275,7 +244,7 @@ public class DashboardServiceImpl implements DashboardService {
         // volume mode's Top-N sort needs per-entity weights anyway so a
         // single-pass rollup is simpler than iterated filtered queries.
 
-        List<Map<String, Object>> driverRows = dashboardMapper.topologyDrivers(tenantId);
+        List<TopologyDriverRow> driverRows = dashboardMapper.topologyDrivers(tenantId);
         long driverTotal = driverRows.size();
         if (driverRows.isEmpty()) {
             out.setStats(emptyStats(rangeKey, volumeMode));
@@ -283,55 +252,55 @@ public class DashboardServiceImpl implements DashboardService {
         }
 
         Map<Long, String> driverNameById = new LinkedHashMap<>();
-        for (Map<String, Object> r : driverRows) {
-            driverNameById.put(toLong(r.get("id")), asString(r.get("driver_name")));
+        for (TopologyDriverRow r : driverRows) {
+            driverNameById.put(r.getId(), r.getDriverName());
         }
         // All driver ids are needed to fetch their devices; we crop AFTER
         // computing volumes so the top-N drivers reflect real activity, not
         // just the ones with the most devices listed.
         List<Long> allDriverIds = new ArrayList<>(driverNameById.keySet());
 
-        List<Map<String, Object>> deviceRows = dashboardMapper.topologyDevicesByDrivers(tenantId, allDriverIds);
+        List<TopologyDeviceRow> deviceRows = dashboardMapper.topologyDevicesByDrivers(tenantId, allDriverIds);
         long deviceTotal = deviceRows.size();
         Map<Long, Long> deviceToDriver = new HashMap<>(deviceRows.size() * 2);
         Map<Long, String> deviceNameById = new LinkedHashMap<>();
-        for (Map<String, Object> r : deviceRows) {
-            Long did = toLong(r.get("id"));
-            deviceToDriver.put(did, toLong(r.get("driver_id")));
-            deviceNameById.put(did, asString(r.get("device_name")));
+        for (TopologyDeviceRow r : deviceRows) {
+            Long did = r.getId();
+            deviceToDriver.put(did, r.getDriverId());
+            deviceNameById.put(did, r.getDeviceName());
         }
         List<Long> allDeviceIds = new ArrayList<>(deviceNameById.keySet());
 
-        List<Map<String, Object>> bindingRows = allDeviceIds.isEmpty()
+        List<ProfileBindingRow> bindingRows = allDeviceIds.isEmpty()
                 ? Collections.emptyList()
                 : dashboardMapper.topologyProfileBindings(tenantId, allDeviceIds);
         // device → set<profile>  and  profile → set<device>
         Map<Long, Set<Long>> profilesByDevice = new HashMap<>();
         Map<Long, Set<Long>> devicesByProfile = new LinkedHashMap<>();
-        for (Map<String, Object> r : bindingRows) {
-            Long did = toLong(r.get("device_id"));
-            Long pid = toLong(r.get("profile_id"));
+        for (ProfileBindingRow r : bindingRows) {
+            Long did = r.getDeviceId();
+            Long pid = r.getProfileId();
             profilesByDevice.computeIfAbsent(did, k -> new HashSet<>()).add(pid);
             devicesByProfile.computeIfAbsent(pid, k -> new LinkedHashSet<>()).add(did);
         }
 
         Set<Long> allProfileIdSet = devicesByProfile.keySet();
-        List<Map<String, Object>> profileRows = allProfileIdSet.isEmpty()
+        List<TopologyProfileRow> profileRows = allProfileIdSet.isEmpty()
                 ? Collections.emptyList()
                 : dashboardMapper.topologyProfilesByIds(tenantId, allProfileIdSet);
         Map<Long, String> profileNameById = new LinkedHashMap<>();
-        for (Map<String, Object> r : profileRows) {
-            profileNameById.put(toLong(r.get("id")), asString(r.get("profile_name")));
+        for (TopologyProfileRow r : profileRows) {
+            profileNameById.put(r.getId(), r.getProfileName());
         }
 
-        List<Map<String, Object>> pointRows = allProfileIdSet.isEmpty()
+        List<TopologyPointRow> pointRows = allProfileIdSet.isEmpty()
                 ? Collections.emptyList()
                 : dashboardMapper.topologyPointsByProfiles(tenantId, allProfileIdSet);
         long pointTotal = pointRows.size();
         // profile → ordered list of points
-        Map<Long, List<Map<String, Object>>> pointsByProfile = new LinkedHashMap<>();
-        for (Map<String, Object> r : pointRows) {
-            pointsByProfile.computeIfAbsent(toLong(r.get("profile_id")), k -> new ArrayList<>()).add(r);
+        Map<Long, List<TopologyPointRow>> pointsByProfile = new LinkedHashMap<>();
+        for (TopologyPointRow r : pointRows) {
+            pointsByProfile.computeIfAbsent(r.getProfileId(), k -> new ArrayList<>()).add(r);
         }
 
         // ---- Fetch volumes if needed -------------------------------------
@@ -339,11 +308,11 @@ public class DashboardServiceImpl implements DashboardService {
         Map<Long, Map<Long, Long>> volumeByDevicePoint = new HashMap<>();
         if (volumeMode) {
             LocalDateTime from = fromOfRange(rangeKey);
-            List<Map<String, Object>> volumeRows = dashboardMapper.topologyPointVolumes(tenantId, from);
-            for (Map<String, Object> r : volumeRows) {
-                Long did = toLong(r.get("device_id"));
-                Long pid = toLong(r.get("point_id"));
-                long cnt = toLong(r.get("cnt"));
+            List<PointVolumeRow> volumeRows = dashboardMapper.topologyPointVolumes(tenantId, from);
+            for (PointVolumeRow r : volumeRows) {
+                Long did = r.getDeviceId();
+                Long pid = r.getPointId();
+                long cnt = r.getCnt();
                 volumeByDevicePoint.computeIfAbsent(did, k -> new HashMap<>()).put(pid, cnt);
             }
         }
@@ -363,11 +332,11 @@ public class DashboardServiceImpl implements DashboardService {
         Map<Long, Long> driverWeight = new HashMap<>();
 
         if (volumeMode) {
-            for (Map.Entry<Long, List<Map<String, Object>>> e : pointsByProfile.entrySet()) {
+            for (Map.Entry<Long, List<TopologyPointRow>> e : pointsByProfile.entrySet()) {
                 Long profileId = e.getKey();
                 Set<Long> devs = devicesByProfile.getOrDefault(profileId, Collections.emptySet());
-                for (Map<String, Object> r : e.getValue()) {
-                    Long pid = toLong(r.get("id"));
+                for (TopologyPointRow r : e.getValue()) {
+                    Long pid = r.getId();
                     long sum = 0;
                     for (Long did : devs) {
                         Map<Long, Long> vs = volumeByDevicePoint.get(did);
@@ -389,14 +358,14 @@ public class DashboardServiceImpl implements DashboardService {
             //   driver weight = count of devices
             //   device weight = count of profile bindings
             //   point weight = 1 (stable tie-break on id desc later)
-            for (Map<String, Object> r : driverRows) {
-                driverWeight.put(toLong(r.get("id")), toLong(r.get("device_count")));
+            for (TopologyDriverRow r : driverRows) {
+                driverWeight.put(r.getId(), r.getDeviceCount());
             }
-            for (Map<String, Object> r : deviceRows) {
-                deviceWeight.put(toLong(r.get("id")), toLong(r.get("profile_count")));
+            for (TopologyDeviceRow r : deviceRows) {
+                deviceWeight.put(r.getId(), r.getProfileCount());
             }
-            for (Map<String, Object> r : pointRows) {
-                pointWeight.put(toLong(r.get("id")), 1L);
+            for (TopologyPointRow r : pointRows) {
+                pointWeight.put(r.getId(), 1L);
             }
         }
 
@@ -410,46 +379,46 @@ public class DashboardServiceImpl implements DashboardService {
         //
         // Cardinality mode keeps everything so operators can still see
         // "unconfigured" entities on the structural view.
-        List<Map<String, Object>> activeDrivers = volumeMode
+        List<TopologyDriverRow> activeDrivers = volumeMode
                 ? driverRows.stream()
-                  .filter(r -> nullZero(driverWeight.get(toLong(r.get("id")))) > 0)
+                  .filter(r -> nullZero(driverWeight.get(r.getId())) > 0)
                   .collect(java.util.stream.Collectors.toList())
                 : new ArrayList<>(driverRows);
 
         // ---- Crop Top-N drivers ----------------------------------------
-        activeDrivers.sort(cmpByMap(driverWeight, v -> toLong(v.get("id"))));
-        List<Map<String, Object>> topDrivers = activeDrivers.size() > TopologyLimits.TOP_DRIVERS
+        activeDrivers.sort(cmpByMap(driverWeight, v -> v.getId()));
+        List<TopologyDriverRow> topDrivers = activeDrivers.size() > TopologyLimits.TOP_DRIVERS
                 ? activeDrivers.subList(0, TopologyLimits.TOP_DRIVERS)
                 : activeDrivers;
         Set<Long> topDriverIds = new LinkedHashSet<>();
-        for (Map<String, Object> r : topDrivers) topDriverIds.add(toLong(r.get("id")));
+        for (TopologyDriverRow r : topDrivers) topDriverIds.add(r.getId());
 
         // ---- Crop Top-N devices (must belong to a kept driver) ----------
-        List<Map<String, Object>> filteredDevices = new ArrayList<>();
-        for (Map<String, Object> r : deviceRows) {
-            if (!topDriverIds.contains(toLong(r.get("driver_id")))) continue;
-            if (volumeMode && nullZero(deviceWeight.get(toLong(r.get("id")))) == 0) continue;
+        List<TopologyDeviceRow> filteredDevices = new ArrayList<>();
+        for (TopologyDeviceRow r : deviceRows) {
+            if (!topDriverIds.contains(r.getDriverId())) continue;
+            if (volumeMode && nullZero(deviceWeight.get(r.getId())) == 0) continue;
             filteredDevices.add(r);
         }
-        filteredDevices.sort(cmpByMap(deviceWeight, v -> toLong(v.get("id"))));
-        List<Map<String, Object>> topDevices = filteredDevices.size() > TopologyLimits.TOP_DEVICES
+        filteredDevices.sort(cmpByMap(deviceWeight, v -> v.getId()));
+        List<TopologyDeviceRow> topDevices = filteredDevices.size() > TopologyLimits.TOP_DEVICES
                 ? filteredDevices.subList(0, TopologyLimits.TOP_DEVICES)
                 : filteredDevices;
         Set<Long> topDeviceIdSet = new LinkedHashSet<>();
-        for (Map<String, Object> r : topDevices) topDeviceIdSet.add(toLong(r.get("id")));
+        for (TopologyDeviceRow r : topDevices) topDeviceIdSet.add(r.getId());
 
         // Per-driver "others:device:{driverId}" buckets for cropped
         // devices. In volume mode only devices that had activity but got
         // cropped land here — zero-flow devices were filtered above, so
         // Others never represents "nothing is happening".
         Map<Long, List<TopologyHiddenChildVO>> otherDevicesByDriver = new LinkedHashMap<>();
-        for (Map<String, Object> r : filteredDevices) {
-            Long deviceId = toLong(r.get("id"));
+        for (TopologyDeviceRow r : filteredDevices) {
+            Long deviceId = r.getId();
             if (topDeviceIdSet.contains(deviceId)) continue;
-            Long drvId = toLong(r.get("driver_id"));
+            Long drvId = r.getDriverId();
             TopologyHiddenChildVO hidden = new TopologyHiddenChildVO();
             hidden.setId("device:" + deviceId);
-            hidden.setName(asString(r.get("device_name")));
+            hidden.setName(r.getDeviceName());
             hidden.setType("device");
             otherDevicesByDriver.computeIfAbsent(drvId, k -> new ArrayList<>()).add(hidden);
         }
@@ -467,8 +436,8 @@ public class DashboardServiceImpl implements DashboardService {
             Set<Long> active = new LinkedHashSet<>();
             for (Long pid : keptProfileIds) {
                 long sum = 0;
-                for (Map<String, Object> p : pointsByProfile.getOrDefault(pid, Collections.emptyList())) {
-                    sum += nullZero(pointWeight.get(toLong(p.get("id"))));
+                for (TopologyPointRow p : pointsByProfile.getOrDefault(pid, Collections.emptyList())) {
+                    sum += nullZero(pointWeight.get(p.getId()));
                     if (sum > 0) break;
                 }
                 if (sum > 0) active.add(pid);
@@ -480,17 +449,17 @@ public class DashboardServiceImpl implements DashboardService {
         List<TopologyNodeVO> nodes = new ArrayList<>();
         List<TopologyLinkVO> links = new ArrayList<>();
 
-        for (Map<String, Object> r : topDrivers) {
-            Long id = toLong(r.get("id"));
+        for (TopologyDriverRow r : topDrivers) {
+            Long id = r.getId();
             nodes.add(node("driver:" + id, driverNameById.get(id), 1, "driver", null));
         }
 
         // Driver → Device links. Edge weight in cardinality mode = 1 (one
         // relationship); in volume mode = that device's total pv count.
-        for (Map<String, Object> r : topDevices) {
-            Long id = toLong(r.get("id"));
-            Long driverId = toLong(r.get("driver_id"));
-            String name = asString(r.get("device_name"));
+        for (TopologyDeviceRow r : topDevices) {
+            Long id = r.getId();
+            Long driverId = r.getDriverId();
+            String name = r.getDeviceName();
             nodes.add(node("device:" + id, name, 2, "device", null));
             long w = volumeMode ? nullZero(deviceWeight.get(id)) : 1L;
             links.add(link("driver:" + driverId, "device:" + id, Math.max(1L, w)));
@@ -527,19 +496,19 @@ public class DashboardServiceImpl implements DashboardService {
         // that sum is 0 so we don't draw a dangling minimum-width band
         // for a device that never sent data through this profile — even
         // if other devices on the same profile did.
-        for (Map<String, Object> r : bindingRows) {
-            Long deviceId = toLong(r.get("device_id"));
-            Long profileId = toLong(r.get("profile_id"));
+        for (ProfileBindingRow r : bindingRows) {
+            Long deviceId = r.getDeviceId();
+            Long profileId = r.getProfileId();
             if (!topDeviceIdSet.contains(deviceId)) continue;
             if (!keptProfileIds.contains(profileId)) continue;
             long w = 1L;
             if (volumeMode) {
                 long sum = 0;
                 Map<Long, Long> devVols = volumeByDevicePoint.get(deviceId);
-                List<Map<String, Object>> pts = pointsByProfile.getOrDefault(profileId, Collections.emptyList());
+                List<TopologyPointRow> pts = pointsByProfile.getOrDefault(profileId, Collections.emptyList());
                 if (devVols != null) {
-                    for (Map<String, Object> p : pts) {
-                        sum += devVols.getOrDefault(toLong(p.get("id")), 0L);
+                    for (TopologyPointRow p : pts) {
+                        sum += devVols.getOrDefault(p.getId(), 0L);
                     }
                 }
                 if (sum == 0) continue;
@@ -554,20 +523,20 @@ public class DashboardServiceImpl implements DashboardService {
         // but silent"; cardinality keeps everything for the structural
         // view.
         for (Long profileId : keptProfileIds) {
-            List<Map<String, Object>> allPoints = new ArrayList<>(
+            List<TopologyPointRow> allPoints = new ArrayList<>(
                     pointsByProfile.getOrDefault(profileId, Collections.emptyList()));
             if (volumeMode) {
-                allPoints.removeIf(p -> nullZero(pointWeight.get(toLong(p.get("id")))) == 0);
-                allPoints.sort(cmpByMap(pointWeight, v -> toLong(v.get("id"))));
+                allPoints.removeIf(p -> nullZero(pointWeight.get(p.getId())) == 0);
+                allPoints.sort(cmpByMap(pointWeight, v -> v.getId()));
             } else {
-                allPoints.sort(Comparator.comparingLong((Map<String, Object> r) -> toLong(r.get("id"))).reversed());
+                allPoints.sort(Comparator.comparingLong((TopologyPointRow r) -> r.getId()).reversed());
             }
 
             int keep = Math.min(TopologyLimits.TOP_POINTS_PER_PROFILE, allPoints.size());
             for (int i = 0; i < keep; i++) {
-                Map<String, Object> r = allPoints.get(i);
-                Long id = toLong(r.get("id"));
-                String name = asString(r.get("point_name"));
+                TopologyPointRow r = allPoints.get(i);
+                Long id = r.getId();
+                String name = r.getPointName();
                 nodes.add(node("point:" + id, name, 4, "point", null));
                 long w = volumeMode ? nullZero(pointWeight.get(id)) : 1L;
                 links.add(link("profile:" + profileId, "point:" + id, Math.max(1L, w)));
@@ -577,11 +546,11 @@ public class DashboardServiceImpl implements DashboardService {
                 List<TopologyHiddenChildVO> children = new ArrayList<>(allPoints.size() - keep);
                 long sumW = 0;
                 for (int i = keep; i < allPoints.size(); i++) {
-                    Map<String, Object> r = allPoints.get(i);
-                    Long id = toLong(r.get("id"));
+                    TopologyPointRow r = allPoints.get(i);
+                    Long id = r.getId();
                     TopologyHiddenChildVO hidden = new TopologyHiddenChildVO();
                     hidden.setId("point:" + id);
-                    hidden.setName(asString(r.get("point_name")));
+                    hidden.setName(r.getPointName());
                     hidden.setType("point");
                     children.add(hidden);
                     if (volumeMode) sumW += nullZero(pointWeight.get(id));
